Restructure repo architecture.
* Adds GRPC generation.
* Adds more subject information to the VC.
